--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,9 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "prisma:migrate": "npx prisma migrate dev"
-
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-validator": "^7.3.1",
-    "prisma": "^6.19.0"
+    "path": "^0.12.7",
+    "prisma": "^6.19.0",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
